--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,60 +4,60 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 01/11/2019
+ms.date: 01/12/2019
 uid: migration/21-to-22
-ms.openlocfilehash: cb51c795447d4a2cd5e755e3aa726e60e0646ef3
-ms.sourcegitcommit: ec71fd5a988f927ae301813aae5ff764feb3bb6a
+ms.openlocfilehash: 43db90ce3e43e0035ae1b21335d201f3b21b9389
+ms.sourcegitcommit: 42a8164b8aba21f322ffefacb92301bdfb4d3c2d
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/12/2019
-ms.locfileid: "54249397"
+ms.lasthandoff: 01/16/2019
+ms.locfileid: "54341769"
 ---
-# <a name="migrate-from-aspnet-core-21-to-22"></a><span data-ttu-id="d0c71-103">Migrer d’ASP.NET Core 2.1 vers 2.2</span><span class="sxs-lookup"><span data-stu-id="d0c71-103">Migrate from ASP.NET Core 2.1 to 2.2</span></span>
+# <a name="migrate-from-aspnet-core-21-to-22"></a><span data-ttu-id="c3137-103">Migrer d’ASP.NET Core 2.1 vers 2.2</span><span class="sxs-lookup"><span data-stu-id="c3137-103">Migrate from ASP.NET Core 2.1 to 2.2</span></span>
 
-<span data-ttu-id="d0c71-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="d0c71-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
+<span data-ttu-id="c3137-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="c3137-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
 
-<span data-ttu-id="d0c71-105">Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="d0c71-105">This article explains how to update an existing ASP.NET Core 2.1 project to ASP.NET Core 2.2.</span></span>
+<span data-ttu-id="c3137-105">Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="c3137-105">This article explains how to update an existing ASP.NET Core 2.1 project to ASP.NET Core 2.2.</span></span>
 
 [!INCLUDE[](~/includes/net-core-prereqs-all-2.2.md)]
 
-## <a name="update-target-framework-moniker-tfm"></a><span data-ttu-id="d0c71-106">Mettre à jour le Moniker du Framework cible</span><span class="sxs-lookup"><span data-stu-id="d0c71-106">Update Target Framework Moniker (TFM)</span></span>
+## <a name="update-target-framework-moniker-tfm"></a><span data-ttu-id="c3137-106">Mettre à jour le Moniker du Framework cible</span><span class="sxs-lookup"><span data-stu-id="c3137-106">Update Target Framework Moniker (TFM)</span></span>
 
-<span data-ttu-id="d0c71-107">Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="d0c71-107">Projects targeting .NET Core should use the [TFM](/dotnet/standard/frameworks#referring-to-frameworks) of a version greater than or equal to .NET Core 2.2.</span></span> <span data-ttu-id="d0c71-108">Mise à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:</span><span class="sxs-lookup"><span data-stu-id="d0c71-108">Update the `<TargetFramework>` node's inner text with `netcoreapp2.2`:</span></span>
+<span data-ttu-id="c3137-107">Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="c3137-107">Projects targeting .NET Core should use the [TFM](/dotnet/standard/frameworks#referring-to-frameworks) of a version greater than or equal to .NET Core 2.2.</span></span> <span data-ttu-id="c3137-108">Mise à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:</span><span class="sxs-lookup"><span data-stu-id="c3137-108">Update the `<TargetFramework>` node's inner text with `netcoreapp2.2`:</span></span>
 
 ```xml
 <TargetFramework>netcoreapp2.2</TargetFramework>
 ```
 
-<span data-ttu-id="d0c71-109">Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du Framework cible d’une version supérieure ou égale à .NET Framework 4.6.1 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-109">Projects targeting .NET Framework may continue to use the TFM of a version greater than or equal to .NET Framework 4.6.1:</span></span>
+<span data-ttu-id="c3137-109">Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du Framework cible d’une version supérieure ou égale à .NET Framework 4.6.1 :</span><span class="sxs-lookup"><span data-stu-id="c3137-109">Projects targeting .NET Framework may continue to use the TFM of a version greater than or equal to .NET Framework 4.6.1:</span></span>
 
 ```xml
 <TargetFramework>net461</TargetFramework>
 ```
 
-## <a name="adopt-the-iis-in-process-hosting-model"></a><span data-ttu-id="d0c71-110">Adopter le modèle d’hébergement intra-processus IIS</span><span class="sxs-lookup"><span data-stu-id="d0c71-110">Adopt the IIS in-process hosting model</span></span>
+## <a name="adopt-the-iis-in-process-hosting-model"></a><span data-ttu-id="c3137-110">Adopter le modèle d’hébergement intra-processus IIS</span><span class="sxs-lookup"><span data-stu-id="c3137-110">Adopt the IIS in-process hosting model</span></span>
 
-<span data-ttu-id="d0c71-111">Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundamentals/servers/index#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :</span><span class="sxs-lookup"><span data-stu-id="d0c71-111">To adopt the [in-process hosting model for IIS](xref:fundamentals/servers/index#in-process-hosting-model), add the `<AspNetCoreHostingModel>` property with a value of `InProcess` to a `<PropertyGroup>` in the project file:</span></span>
+<span data-ttu-id="c3137-111">Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundamentals/servers/index#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :</span><span class="sxs-lookup"><span data-stu-id="c3137-111">To adopt the [in-process hosting model for IIS](xref:fundamentals/servers/index#in-process-hosting-model), add the `<AspNetCoreHostingModel>` property with a value of `InProcess` to a `<PropertyGroup>` in the project file:</span></span>
 
 ```xml
 <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 ```
 
-<span data-ttu-id="d0c71-112">Le modèle d’hébergement intra-processus n’est pas pris en charge pour les applications ASP.NET Core qui ciblent le .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="d0c71-112">The in-process hosting model isn't supported for ASP.NET Core apps that target the .NET Framework.</span></span>
+<span data-ttu-id="c3137-112">Le modèle d’hébergement in-process n’est pas pris en charge pour les applications ASP.NET Core qui ciblent le .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="c3137-112">The in-process hosting model isn't supported for ASP.NET Core apps that target the .NET Framework.</span></span>
 
-<span data-ttu-id="d0c71-113">Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span><span class="sxs-lookup"><span data-stu-id="d0c71-113">For more information, see <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span></span>
+<span data-ttu-id="c3137-113">Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span><span class="sxs-lookup"><span data-stu-id="c3137-113">For more information, see <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span></span>
 
-## <a name="update-package-references"></a><span data-ttu-id="d0c71-114">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="d0c71-114">Update package references</span></span>
+## <a name="update-package-references"></a><span data-ttu-id="c3137-114">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="c3137-114">Update package references</span></span>
 
-<span data-ttu-id="d0c71-115">Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de métapackage.</span><span class="sxs-lookup"><span data-stu-id="d0c71-115">If targeting .NET Core, remove the `Version` attribute for the metapackage reference.</span></span> <span data-ttu-id="d0c71-116">Inclusion d’un `Version` attribut entraîne l’avertissement suivant :</span><span class="sxs-lookup"><span data-stu-id="d0c71-116">Inclusion of a `Version` attribute results in the following warning:</span></span>
+<span data-ttu-id="c3137-115">Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de métapackage.</span><span class="sxs-lookup"><span data-stu-id="c3137-115">If targeting .NET Core, remove the `Version` attribute for the metapackage reference.</span></span> <span data-ttu-id="c3137-116">Inclusion d’un `Version` attribut entraîne l’avertissement suivant :</span><span class="sxs-lookup"><span data-stu-id="c3137-116">Inclusion of a `Version` attribute results in the following warning:</span></span>
 
 ```console
 A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`. Specifying the version of this package is not recommended. For more information, see https://aka.ms/sdkimplicitrefs
 ```
 
-<span data-ttu-id="d0c71-117">Pour plus d'informations, consultez <xref:fundamentals/metapackage-app>.</span><span class="sxs-lookup"><span data-stu-id="d0c71-117">For more information, see <xref:fundamentals/metapackage-app>.</span></span>
+<span data-ttu-id="c3137-117">Pour plus d'informations, consultez <xref:fundamentals/metapackage-app>.</span><span class="sxs-lookup"><span data-stu-id="c3137-117">For more information, see <xref:fundamentals/metapackage-app>.</span></span>
 
-<span data-ttu-id="d0c71-118">La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :</span><span class="sxs-lookup"><span data-stu-id="d0c71-118">The metapackage reference should resemble the following `<PackageReference />` node:</span></span>
+<span data-ttu-id="c3137-118">La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :</span><span class="sxs-lookup"><span data-stu-id="c3137-118">The metapackage reference should resemble the following `<PackageReference />` node:</span></span>
 
 ```xml
 <ItemGroup>
@@ -65,7 +65,7 @@ A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`.
 </ItemGroup>
 ```
 
-<span data-ttu-id="d0c71-119">Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="d0c71-119">If targeting .NET Framework, update each package reference's `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="d0c71-120">Voici les références de package dans un projet ASP.NET Core 2.2 classique qui ciblent .NET Framework :</span><span class="sxs-lookup"><span data-stu-id="d0c71-120">Here are the package references in a typical ASP.NET Core 2.2 project targeting .NET Framework:</span></span>
+<span data-ttu-id="c3137-119">Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="c3137-119">If targeting .NET Framework, update each package reference's `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="c3137-120">Voici les références de package dans un projet ASP.NET Core 2.2 classique qui ciblent .NET Framework :</span><span class="sxs-lookup"><span data-stu-id="c3137-120">Here are the package references in a typical ASP.NET Core 2.2 project targeting .NET Framework:</span></span>
 
 ```xml
 <ItemGroup>
@@ -77,15 +77,15 @@ A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`.
 </ItemGroup>
 ```
 
-<span data-ttu-id="d0c71-121">Si le référencement la [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) du package, mettez à jour son `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="d0c71-121">If referencing the [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) package, update its `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="d0c71-122">Cela génère l’erreur suivante :</span><span class="sxs-lookup"><span data-stu-id="d0c71-122">Failure to do so results in the following error:</span></span>
+<span data-ttu-id="c3137-121">Si le référencement la [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) du package, mettez à jour son `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="c3137-121">If referencing the [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) package, update its `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="c3137-122">Cela génère l’erreur suivante :</span><span class="sxs-lookup"><span data-stu-id="c3137-122">Failure to do so results in the following error:</span></span>
 
 ```console
 Detected package downgrade: Microsoft.AspNetCore.Razor.Design from 2.2.0 to 2.1.2. Reference the package directly from the project to select a different version.
 ```
 
-## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="d0c71-123">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="d0c71-123">Update .NET Core SDK version in global.json</span></span>
+## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="c3137-123">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="c3137-123">Update .NET Core SDK version in global.json</span></span>
 
-<span data-ttu-id="d0c71-124">Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :</span><span class="sxs-lookup"><span data-stu-id="d0c71-124">If your solution relies upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update its `version` property to the 2.2 version installed on your machine:</span></span>
+<span data-ttu-id="c3137-124">Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :</span><span class="sxs-lookup"><span data-stu-id="c3137-124">If your solution relies upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update its `version` property to the 2.2 version installed on your machine:</span></span>
 
 ```json
 {
@@ -95,15 +95,15 @@ Detected package downgrade: Microsoft.AspNetCore.Razor.Design from 2.2.0 to 2.1.
 }
 ```
 
-## <a name="update-launch-settings"></a><span data-ttu-id="d0c71-125">Mettre à jour les paramètres de lancement</span><span class="sxs-lookup"><span data-stu-id="d0c71-125">Update launch settings</span></span>
+## <a name="update-launch-settings"></a><span data-ttu-id="c3137-125">Mettre à jour les paramètres de lancement</span><span class="sxs-lookup"><span data-stu-id="c3137-125">Update launch settings</span></span>
 
-<span data-ttu-id="d0c71-126">Si à l’aide de Visual Studio Code, de mettre à jour le fichier de paramètres de lancement du projet (*.vscode/launch.json*).</span><span class="sxs-lookup"><span data-stu-id="d0c71-126">If using Visual Studio Code, update the project's launch settings file (*.vscode/launch.json*).</span></span> <span data-ttu-id="d0c71-127">Le `program` chemin d’accès doit référencer le nouveau moniker du Framework cible :</span><span class="sxs-lookup"><span data-stu-id="d0c71-127">The `program` path should reference the new TFM:</span></span>
+<span data-ttu-id="c3137-126">Si à l’aide de Visual Studio Code, de mettre à jour le fichier de paramètres de lancement du projet (*.vscode/launch.json*).</span><span class="sxs-lookup"><span data-stu-id="c3137-126">If using Visual Studio Code, update the project's launch settings file (*.vscode/launch.json*).</span></span> <span data-ttu-id="c3137-127">Le `program` chemin d’accès doit référencer le nouveau moniker du Framework cible :</span><span class="sxs-lookup"><span data-stu-id="c3137-127">The `program` path should reference the new TFM:</span></span>
 
 [!code-json[](21-to-22/samples/launch.json?highlight=10)]
 
-## <a name="kestrel-configuration"></a><span data-ttu-id="d0c71-128">Configuration de Kestrel</span><span class="sxs-lookup"><span data-stu-id="d0c71-128">Kestrel configuration</span></span>
+## <a name="update-kestrel-configuration"></a><span data-ttu-id="c3137-128">Mettre à jour de configuration de Kestrel</span><span class="sxs-lookup"><span data-stu-id="c3137-128">Update Kestrel configuration</span></span>
 
-<span data-ttu-id="d0c71-129">Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> dans le `CreateDefaultBuilder` méthode de la `Program` classe, appelez `ConfigureKestrel` pour configurer le serveur Kestrel au lieu de `UseKestrel` afin d’éviter les conflits avec la [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model):</span><span class="sxs-lookup"><span data-stu-id="d0c71-129">If the app calls <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> in the `CreateDefaultBuilder` method of the `Program` class, call `ConfigureKestrel` to configure Kestrel server instead of `UseKestrel` in order to avoid conflicts with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model):</span></span>
+<span data-ttu-id="c3137-129">Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> en appelant `CreateDefaultBuilder` dans le [CreateWebHostBuilder méthode](xref:fundamentals/host/web-host#set-up-a-host) de la `Program` classe, appelez `ConfigureKestrel` pour configurer le serveur Kestrel au lieu de `UseKestrel` afin d’éviter est en conflit avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model):</span><span class="sxs-lookup"><span data-stu-id="c3137-129">If the app calls <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> by calling `CreateDefaultBuilder` in the [CreateWebHostBuilder method](xref:fundamentals/host/web-host#set-up-a-host) of the `Program` class, call `ConfigureKestrel` to configure Kestrel server instead of `UseKestrel` in order to avoid conflicts with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model):</span></span>
 
 ```csharp
 public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
@@ -115,7 +115,7 @@ public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
         });
 ```
 
-<span data-ttu-id="d0c71-130">Si l’application n’appelle pas `CreateDefaultBuilder`, appelez <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> **avant** appelant `ConfigureKestrel`:</span><span class="sxs-lookup"><span data-stu-id="d0c71-130">If the app doesn't call `CreateDefaultBuilder`, call <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> **before** calling `ConfigureKestrel`:</span></span>
+<span data-ttu-id="c3137-130">Si l’application n’appelle pas `CreateDefaultBuilder` et génère l’hôte manuellement dans le `Program` classe, appelez <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> **avant** appelant `ConfigureKestrel`:</span><span class="sxs-lookup"><span data-stu-id="c3137-130">If the app doesn't call `CreateDefaultBuilder` and builds the host manually in the `Program` class, call <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> **before** calling `ConfigureKestrel`:</span></span>
 
 ```csharp
 public static void Main(string[] args)
@@ -135,46 +135,46 @@ public static void Main(string[] args)
 }
 ```
 
-<span data-ttu-id="d0c71-131">Pour plus d'informations, consultez <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span><span class="sxs-lookup"><span data-stu-id="d0c71-131">For more information, see <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span></span>
+<span data-ttu-id="c3137-131">Pour plus d'informations, consultez <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span><span class="sxs-lookup"><span data-stu-id="c3137-131">For more information, see <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span></span>
 
-## <a name="update-compatibility-version"></a><span data-ttu-id="d0c71-132">Version de compatibilité de mise à jour</span><span class="sxs-lookup"><span data-stu-id="d0c71-132">Update compatibility version</span></span>
+## <a name="update-compatibility-version"></a><span data-ttu-id="c3137-132">Version de compatibilité de mise à jour</span><span class="sxs-lookup"><span data-stu-id="c3137-132">Update compatibility version</span></span>
 
-<span data-ttu-id="d0c71-133">Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à `Version_2_2`:</span><span class="sxs-lookup"><span data-stu-id="d0c71-133">Update the compatibility version in `Startup.ConfigureServices` to `Version_2_2`:</span></span>
+<span data-ttu-id="c3137-133">Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à `Version_2_2`:</span><span class="sxs-lookup"><span data-stu-id="c3137-133">Update the compatibility version in `Startup.ConfigureServices` to `Version_2_2`:</span></span>
 
 ```csharp
 services.AddMvc()
         .SetCompatibilityVersion(CompatibilityVersion.Version_2_2);
 ```
 
-## <a name="update-cors-policy"></a><span data-ttu-id="d0c71-134">Mettre à jour la stratégie CORS</span><span class="sxs-lookup"><span data-stu-id="d0c71-134">Update CORS policy</span></span>
+## <a name="update-cors-policy"></a><span data-ttu-id="c3137-134">Mettre à jour la stratégie CORS</span><span class="sxs-lookup"><span data-stu-id="c3137-134">Update CORS policy</span></span>
 
-<span data-ttu-id="d0c71-135">Dans ASP.NET Core 2.2, l’intergiciel (middleware) CORS répond avec une origine de caractère générique (`*`) si une stratégie autorise toute origine et informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="d0c71-135">In ASP.NET Core 2.2, the CORS middleware responds with a wildcard origin (`*`) if a policy allows any origin and allows credentials.</span></span> <span data-ttu-id="d0c71-136">Informations d’identification ne sont pas pris en charge lors d’une origine de caractère générique (`*`) est spécifié, et les navigateurs interdira la demande CORS.</span><span class="sxs-lookup"><span data-stu-id="d0c71-136">Credentials aren't supported when a wildcard origin (`*`) is specified, and browsers will disallow the CORS request.</span></span> <span data-ttu-id="d0c71-137">Pour plus d’informations, notamment des options permettant de corriger le problème sur le client, consultez le [docs de web MDN](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span><span class="sxs-lookup"><span data-stu-id="d0c71-137">For more information, including options for correcting the problem on the client, see the [MDN web docs](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span></span>
+<span data-ttu-id="c3137-135">Dans ASP.NET Core 2.2, l’intergiciel (middleware) CORS répond avec une origine de caractère générique (`*`) si une stratégie autorise toute origine et informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="c3137-135">In ASP.NET Core 2.2, the CORS middleware responds with a wildcard origin (`*`) if a policy allows any origin and allows credentials.</span></span> <span data-ttu-id="c3137-136">Informations d’identification ne sont pas pris en charge lors d’une origine de caractère générique (`*`) est spécifié, et les navigateurs interdira la demande CORS.</span><span class="sxs-lookup"><span data-stu-id="c3137-136">Credentials aren't supported when a wildcard origin (`*`) is specified, and browsers will disallow the CORS request.</span></span> <span data-ttu-id="c3137-137">Pour plus d’informations, notamment des options permettant de corriger le problème sur le client, consultez le [docs de web MDN](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span><span class="sxs-lookup"><span data-stu-id="c3137-137">For more information, including options for correcting the problem on the client, see the [MDN web docs](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span></span>
 
-<span data-ttu-id="d0c71-138">Pour corriger ce problème sur le serveur, effectuez l’une des actions suivantes :</span><span class="sxs-lookup"><span data-stu-id="d0c71-138">To correct this problem on the server, take one of the following actions:</span></span>
+<span data-ttu-id="c3137-138">Pour corriger ce problème sur le serveur, effectuez l’une des actions suivantes :</span><span class="sxs-lookup"><span data-stu-id="c3137-138">To correct this problem on the server, take one of the following actions:</span></span>
 
-* <span data-ttu-id="d0c71-139">Modifier la stratégie CORS pour ne plus autoriser les informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="d0c71-139">Modify the CORS policy to no longer allow credentials.</span></span> <span data-ttu-id="d0c71-140">Autrement dit, supprimez l’appel à <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> lors de la configuration de la stratégie.</span><span class="sxs-lookup"><span data-stu-id="d0c71-140">That is, remove the call to <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> when configuring the policy.</span></span>
-* <span data-ttu-id="d0c71-141">Si les informations d’identification sont requises pour la demande CORS réussisse, modifiez la stratégie pour spécifier les hôtes autorisés.</span><span class="sxs-lookup"><span data-stu-id="d0c71-141">If credentials are required for the CORS request to succeed, modify the policy to specify allowed hosts.</span></span> <span data-ttu-id="d0c71-142">Par exemple, utilisez `builder.WithOrigins("https://api.example1.com", "https://example2.com")` au lieu d’utiliser <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span><span class="sxs-lookup"><span data-stu-id="d0c71-142">For example, use `builder.WithOrigins("https://api.example1.com", "https://example2.com")` instead of using <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span></span>
+* <span data-ttu-id="c3137-139">Modifier la stratégie CORS pour ne plus autoriser les informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="c3137-139">Modify the CORS policy to no longer allow credentials.</span></span> <span data-ttu-id="c3137-140">Autrement dit, supprimez l’appel à <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> lors de la configuration de la stratégie.</span><span class="sxs-lookup"><span data-stu-id="c3137-140">That is, remove the call to <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> when configuring the policy.</span></span>
+* <span data-ttu-id="c3137-141">Si les informations d’identification sont requises pour la demande CORS réussisse, modifiez la stratégie pour spécifier les hôtes autorisés.</span><span class="sxs-lookup"><span data-stu-id="c3137-141">If credentials are required for the CORS request to succeed, modify the policy to specify allowed hosts.</span></span> <span data-ttu-id="c3137-142">Par exemple, utilisez `builder.WithOrigins("https://api.example1.com", "https://example2.com")` au lieu d’utiliser <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span><span class="sxs-lookup"><span data-stu-id="c3137-142">For example, use `builder.WithOrigins("https://api.example1.com", "https://example2.com")` instead of using <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span></span>
 
-## <a name="update-docker-images"></a><span data-ttu-id="d0c71-143">Mettre à jour des images Docker</span><span class="sxs-lookup"><span data-stu-id="d0c71-143">Update Docker images</span></span>
+## <a name="update-docker-images"></a><span data-ttu-id="c3137-143">Mettre à jour des images Docker</span><span class="sxs-lookup"><span data-stu-id="c3137-143">Update Docker images</span></span>
 
-<span data-ttu-id="d0c71-144">Le tableau suivant montre l’image Docker de modifications de la balise :</span><span class="sxs-lookup"><span data-stu-id="d0c71-144">The following table shows the Docker image tag changes:</span></span>
+<span data-ttu-id="c3137-144">Le tableau suivant montre l’image Docker de modifications de la balise :</span><span class="sxs-lookup"><span data-stu-id="c3137-144">The following table shows the Docker image tag changes:</span></span>
 
-| <span data-ttu-id="d0c71-145">2.1</span><span class="sxs-lookup"><span data-stu-id="d0c71-145">2.1</span></span>                                       | <span data-ttu-id="d0c71-146">2.2</span><span class="sxs-lookup"><span data-stu-id="d0c71-146">2.2</span></span>                                       |
+| <span data-ttu-id="c3137-145">2.1</span><span class="sxs-lookup"><span data-stu-id="c3137-145">2.1</span></span>                                       | <span data-ttu-id="c3137-146">2.2</span><span class="sxs-lookup"><span data-stu-id="c3137-146">2.2</span></span>                                       |
 | ----------------------------------------- | ----------------------------------------- |
 | `microsoft/dotnet:2.1-aspnetcore-runtime` | `microsoft/dotnet:2.2-aspnetcore-runtime` |
 | `microsoft/dotnet:2.1-sdk`                | `microsoft/dotnet:2.2-sdk`                |
 
-<span data-ttu-id="d0c71-147">Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.</span><span class="sxs-lookup"><span data-stu-id="d0c71-147">Change the `FROM` lines in your *Dockerfile* to use the new image tags in the preceding table's 2.2 column.</span></span>
+<span data-ttu-id="c3137-147">Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.</span><span class="sxs-lookup"><span data-stu-id="c3137-147">Change the `FROM` lines in your *Dockerfile* to use the new image tags in the preceding table's 2.2 column.</span></span>
 
-## <a name="build-manually-in-visual-studio-when-using-iis-in-process-hosting"></a><span data-ttu-id="d0c71-148">Créer manuellement dans Visual Studio lorsque vous utilisez IIS dans le processus d’hébergement</span><span class="sxs-lookup"><span data-stu-id="d0c71-148">Build manually in Visual Studio when using IIS in-process hosting</span></span>
+## <a name="build-manually-in-visual-studio-when-using-iis-in-process-hosting"></a><span data-ttu-id="c3137-148">Créer manuellement dans Visual Studio lorsque vous utilisez IIS dans le processus d’hébergement</span><span class="sxs-lookup"><span data-stu-id="c3137-148">Build manually in Visual Studio when using IIS in-process hosting</span></span>
 
-<span data-ttu-id="d0c71-149">De Visual Studio **la génération automatique de demande de navigateur** expérience ne fonctionne pas avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model).</span><span class="sxs-lookup"><span data-stu-id="d0c71-149">Visual Studio's **Auto build on browser request** experience doesn't function with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model).</span></span> <span data-ttu-id="d0c71-150">Vous devez manuellement regénérer le projet lors de l’utilisation dans le processus d’hébergement.</span><span class="sxs-lookup"><span data-stu-id="d0c71-150">You must manually rebuild the project when using in-process hosting.</span></span> <span data-ttu-id="d0c71-151">Améliorations apportées à cette expérience sont prévues pour une future version de Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="d0c71-151">Improvements to this experience are planned for a future release of Visual Studio.</span></span>
+<span data-ttu-id="c3137-149">De Visual Studio **la génération automatique de demande de navigateur** expérience ne fonctionne pas avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model).</span><span class="sxs-lookup"><span data-stu-id="c3137-149">Visual Studio's **Auto build on browser request** experience doesn't function with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model).</span></span> <span data-ttu-id="c3137-150">Vous devez manuellement regénérer le projet lors de l’utilisation dans le processus d’hébergement.</span><span class="sxs-lookup"><span data-stu-id="c3137-150">You must manually rebuild the project when using in-process hosting.</span></span> <span data-ttu-id="c3137-151">Améliorations apportées à cette expérience sont prévues pour une future version de Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="c3137-151">Improvements to this experience are planned for a future release of Visual Studio.</span></span>
 
-## <a name="update-logging-code"></a><span data-ttu-id="d0c71-152">Mettre à jour le code de journalisation</span><span class="sxs-lookup"><span data-stu-id="d0c71-152">Update logging code</span></span>
+## <a name="update-logging-code"></a><span data-ttu-id="c3137-152">Mettre à jour le code de journalisation</span><span class="sxs-lookup"><span data-stu-id="c3137-152">Update logging code</span></span>
 
-* <span data-ttu-id="d0c71-153">Déplacement de l’initialisation du fournisseur pour la journalisation `Startup.ConfigureServices`.</span><span class="sxs-lookup"><span data-stu-id="d0c71-153">Move logging provider initialization to `Startup.ConfigureServices`.</span></span>
+* <span data-ttu-id="c3137-153">Déplacement de l’initialisation du fournisseur pour la journalisation `Startup.ConfigureServices`.</span><span class="sxs-lookup"><span data-stu-id="c3137-153">Move logging provider initialization to `Startup.ConfigureServices`.</span></span>
 
-  <span data-ttu-id="d0c71-154">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-154">2.1 example:</span></span>
+  <span data-ttu-id="c3137-154">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="c3137-154">2.1 example:</span></span>
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -183,7 +183,7 @@ services.AddMvc()
   }
   ```
 
-  <span data-ttu-id="d0c71-155">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-155">2.2 example:</span></span>
+  <span data-ttu-id="c3137-155">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="c3137-155">2.2 example:</span></span>
 
   ```csharp
   public void ConfigureServices(IServiceCollection services)
@@ -192,9 +192,9 @@ services.AddMvc()
   }
   ```
 
-* <span data-ttu-id="d0c71-156">Modification de filtrage pour utiliser le <xref:Microsoft.Extensions.DependencyInjection.LoggingServiceCollectionExtensions.AddLogging*> générateur.</span><span class="sxs-lookup"><span data-stu-id="d0c71-156">Change filtering to use the <xref:Microsoft.Extensions.DependencyInjection.LoggingServiceCollectionExtensions.AddLogging*> builder.</span></span>
+* <span data-ttu-id="c3137-156">Modification de filtrage pour utiliser le <xref:Microsoft.Extensions.DependencyInjection.LoggingServiceCollectionExtensions.AddLogging*> générateur.</span><span class="sxs-lookup"><span data-stu-id="c3137-156">Change filtering to use the <xref:Microsoft.Extensions.DependencyInjection.LoggingServiceCollectionExtensions.AddLogging*> builder.</span></span>
 
-  <span data-ttu-id="d0c71-157">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-157">2.1 example:</span></span>
+  <span data-ttu-id="c3137-157">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="c3137-157">2.1 example:</span></span>
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -206,7 +206,7 @@ services.AddMvc()
   }
   ```
 
-  <span data-ttu-id="d0c71-158">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-158">2.2 example:</span></span>
+  <span data-ttu-id="c3137-158">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="c3137-158">2.2 example:</span></span>
 
   ```csharp
   public void ConfigureServices(IServiceCollection services)
@@ -222,9 +222,9 @@ services.AddMvc()
   }
   ```
 
-* <span data-ttu-id="d0c71-159">Modifier le chargement de configuration à utiliser le `AddLogging` générateur.</span><span class="sxs-lookup"><span data-stu-id="d0c71-159">Change configuration loading to use the `AddLogging` builder.</span></span>
+* <span data-ttu-id="c3137-159">Modifier le chargement de configuration à utiliser le `AddLogging` générateur.</span><span class="sxs-lookup"><span data-stu-id="c3137-159">Change configuration loading to use the `AddLogging` builder.</span></span>
 
-  <span data-ttu-id="d0c71-160">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-160">2.1 example:</span></span>
+  <span data-ttu-id="c3137-160">exemple 2.1 :</span><span class="sxs-lookup"><span data-stu-id="c3137-160">2.1 example:</span></span>
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -233,7 +233,7 @@ services.AddMvc()
   }
   ```
 
-  <span data-ttu-id="d0c71-161">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="d0c71-161">2.2 example:</span></span>
+  <span data-ttu-id="c3137-161">exemple 2.2 :</span><span class="sxs-lookup"><span data-stu-id="c3137-161">2.2 example:</span></span>
 
   ```csharp
   public void ConfigureServices(IServiceCollection services)
@@ -244,8 +244,8 @@ services.AddMvc()
   }
   ```
 
-## <a name="additional-resources"></a><span data-ttu-id="d0c71-162">Ressources supplémentaires</span><span class="sxs-lookup"><span data-stu-id="d0c71-162">Additional resources</span></span>
+## <a name="additional-resources"></a><span data-ttu-id="c3137-162">Ressources supplémentaires</span><span class="sxs-lookup"><span data-stu-id="c3137-162">Additional resources</span></span>
 
 * <xref:mvc/compatibility-version>
 * <xref:fundamentals/metapackage-app>
-* [<span data-ttu-id="d0c71-163">Références de package implicites</span><span class="sxs-lookup"><span data-stu-id="d0c71-163">Implicit package references</span></span>](/dotnet/core/tools/csproj#implicit-package-references)
+* [<span data-ttu-id="c3137-163">Références de package implicites</span><span class="sxs-lookup"><span data-stu-id="c3137-163">Implicit package references</span></span>](/dotnet/core/tools/csproj#implicit-package-references)
